# articles

./: README.md
cleancode/: .gitignore  CMakeLists.txt  README.md  article.md  test_memory_layout.cpp
cleancode/include/: shapes.h
cleancode/src/: bench.cpp  clean_code.cpp  optimized_clean_code.cpp  switch_code.cpp  table_code.cpp
docs/: cleancode.html  index.html
libdesign/: libdesign.md
published/: cleancode.html
